--- a/be/env.example
+++ b/be/env.example
@@ -15,6 +15,11 @@ PAYPAL_WEBHOOK_ID="4HV264793U495940C"
 
 # ExchangeRate.host API Key (for currency service)
 EXCHANGERATE_API_KEY="0fcc123ea0c0c1f4d5b8cbd612f8dd4b"
+
+# Midtrans Configuration
+MIDTRANS_SERVER_KEY="SB-Mid-server-your-server-key-here"
+MIDTRANS_CLIENT_KEY="SB-Mid-client-your-client-key-here"
+
 # Server Configuration
 PORT=3000
 NODE_ENV=development
