--- a/be/package.json
+++ b/be/package.json
@@ -11,6 +11,7 @@
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
     "db:seed": "node prisma/seed.js",
+    "db:seed:currencies": "node prisma/seedCurrencies.js",
     "setup": "node setup-local-db.js",
     "setup:local": "node setup-local-db.js",
     "test:api": "node test-api.js",
@@ -42,6 +43,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
+    "node-cron": "^3.0.3",
     "pg": "^8.16.3",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1",
