--- a/be/env.example
+++ b/be/env.example
@@ -16,6 +16,14 @@ PAYPAL_WEBHOOK_ID="4HV264793U495940C"
 # ExchangeRate.host API Key (for currency service)
 EXCHANGERATE_API_KEY="0fcc123ea0c0c1f4d5b8cbd612f8dd4b"
 
+# Redis Configuration (for caching)
+REDIS_HOST="localhost"
+REDIS_PORT="6379"
+REDIS_PASSWORD=""
+
+# Biteship API Key (for shipping rates)
+BITESHIP_API_KEY="your-biteship-api-key-here"
+
 # Midtrans Configuration
 MIDTRANS_SERVER_KEY="SB-Mid-server-your-server-key-here"
 MIDTRANS_CLIENT_KEY="SB-Mid-client-your-client-key-here"
