--- a/be/package.json
+++ b/be/package.json
@@ -35,9 +35,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
+    "express-rate-limit": "^7.5.1",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "ioredis": "^5.8.1",
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.4.3",
     "morgan": "^1.10.0",
@@ -45,6 +46,7 @@
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "pg": "^8.16.3",
+    "redis": "^5.8.3",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
